Use of z-index to fix alignment issues on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,12 @@ nav a:hover {
 
 .headshot {
     opacity: 0.7;
-    max-height: 100vh;
+    max-height: 110vh;
     max-width: 90vw;
     position: absolute;
     right: 0;
-    bottom: 0;
+    bottom: -10vh;
+    z-index: 0;
 }
 
 .title {
@@ -96,6 +97,7 @@ nav a:hover {
     margin-top: -3vmin;
     margin-bottom: -3vmin;
     text-align: justify;
+    position:relative;
 }
 
 .projectimg {
